--- a/package.json
+++ b/package.json
@@ -1,31 +1,35 @@
 {
-    "name":"eiw.js",
-    "version":"0.0.1",
-    "description":"JavaScript framework to create single page applications",
-    "dependencies":{
-        "grunt":"~0.4.1"
-    },
-    "devDependencies":{
-        "grunt-contrib-watch":"*",
-        "grunt-contrib-concat":"*",
-        "grunt-contrib-uglify":"*"
-    },
-    "scripts":{
-        "test":"grunt test",
-        "start":""
-    },
-    "repository":{
-        "type":"git",
-        "url":"https://github.com/vincentdesmares/eiw.git"
-    },
-    "keywords":[
-        "eiw",
-        "javascript",
-        "framework",
-        "widget"
-    ],
-    "author":"vincent desmares vincent.desmares@gmail.com",
-    "license":"MIT",
-    "readmeFilename":"README.md",
-    "gitHead":"master"
+  "name": "eiw.js",
+  "version": "0.0.1",
+  "description": "JavaScript framework to create single page applications",
+  "dependencies": {
+    "grunt": "~0.4.1",
+    "bower": "^1.3.2"
+  },
+  "devDependencies": {
+    "grunt-contrib-watch": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-uglify": "*",
+    "qunitjs": "^1.12.0",
+    "karma-qunit": "^0.1.1",
+    "karma-chrome-launcher": "^0.1.3"
+  },
+  "scripts": {
+    "test": "grunt test",
+    "start": ""
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/vincentdesmares/eiw.git"
+  },
+  "keywords": [
+    "eiw",
+    "javascript",
+    "framework",
+    "widget"
+  ],
+  "author": "vincent desmares vincent.desmares@gmail.com",
+  "license": "MIT",
+  "readmeFilename": "README.md",
+  "gitHead": "master"
 }
