--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "tests"
   ],
   "dependencies": {
-    "jquery": "~2.1.0",
-    "jasmine-jquery": "~2.0.3"
+    "jquery": "~1.11.0",
+    "jasmine-jquery": "~2.0.3",
+    "jquery-address": "*"
   }
 }
