--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "dependencies": {
     "grunt": "~0.4.1",
     "bower": "^1.3.2",
-    "karma-jasmine": "^0.1.5"
+    "karma-jasmine": "^0.1.5",
+    "karma-ie-launcher": "^0.1.5"
   },
   "devDependencies": {
     "grunt-contrib-watch": "*",
